--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="src/css/bootstrap-multiselect.min.css" type="text/css">
 		<script type="text/javascript" src="src/js/bootstrap-multiselect.js"></script>
 		<script src="app/js/city_list.js"></script>
+		<script type="text/javascript" src="/charts/response.json"></script>
 		<title>Complex chart</title>
 	</head>
 	<body>
